# transformd

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
src/transformd/: __about__.py  __init__.py  exceptions.py  transformer.py  utils.py
src/transformd/strategies/: exclusion.py  inclusion.py
tests/: test_transformer.py  test_utils.py
tests/transformer/: fixtures.py  test_core.py  test_exclusion.py  test_get_specs.py  test_inclusion.py  test_transformer.py
