[tool.poetry]
name = "transformd"
version = "0.1.0"
description = "Transform dictionaries into whatever your heart desires"
authors = ["Adam Hill"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/adamghill/transformd"

[tool.poetry.dependencies]
python = "^3.10"
mergedeep = "1.3.4"
typeguard = "4.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
